251230 비동기 구현 및 테스트 환경 설정

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -81,15 +81,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2f993f3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "함수호출 전\n",
+      "Hello, World!\n",
+      "함수호출 후\n"
+     ]
+    }
+   ],
    "source": [
     "pra = temp_deco(hello_world)\n",
     "\n",
     "pra()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8696e77c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey minsu!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def say_hi(name: str | None):\n",
+    "    print(f\"Hey {name}!\")\n",
+    "\n",
+    "say_hi(\"minsu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72bcebdb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
